--- a/refactor-me/refactor-me.csproj
+++ b/refactor-me/refactor-me.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductOption.cs" />
     <Compile Include="Database\ProductDataPool.cs" />
+    <Compile Include="Models\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IProductsRepository.cs" />
     <Compile Include="Repositories\ProductsRepository.cs" />
