--- a/refactor-me/Web.config
+++ b/refactor-me/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="ConnectionPoolSize" value="5" />
+    <add key="DataPoolSize" value="5" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
